--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-dct-revamp2",
+  "name": "base-project-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
